Finish Activity design completed

--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SkillActivity">
+    tools:context=".controller.SkillActivity">
 
     <ImageView
         android:id="@+id/background"
@@ -58,13 +58,14 @@
         app:layout_constraintTop_toBottomOf="@+id/iamtext">
 
         <ToggleButton
-            android:id="@+id/beginnerButton"
+            android:id="@+id/beginnerSkillButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
             android:fontFamily="@font/montserrat"
+            android:onClick="beginnerButtonClicked"
             android:text="@string/beginner_btn_text"
             android:textColor="@android:color/white"
             android:textOff="@string/beginner_btn_text"
@@ -73,13 +74,14 @@
             android:textStyle="bold" />
 
         <ToggleButton
-            android:id="@+id/ballerButton"
+            android:id="@+id/ballerSkillButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
             android:fontFamily="@font/montserrat"
+            android:onClick="ballerButtonClicked"
             android:text="@string/baller_btn_text"
             android:textColor="@android:color/white"
             android:textOff="@string/baller_btn_text"
@@ -97,6 +99,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/swoosh_button"
         android:fontFamily="@font/montserrat"
+        android:onClick="finishButtonClicked"
         android:text="@string/finish_btn_text"
         android:textColor="@android:color/white"
         android:textSize="16sp"
